# AutoRadionuclide

./: .gitignore  DECISIONS.md  README.md  psma_campaign.db  pyproject.toml
.claude/: settings.local.json
autoradionuclide/: __init__.py
autoradionuclide/config/: __init__.py  schema.py
autoradionuclide/design/: __init__.py  generator.py
autoradionuclide/domain/: __init__.py  models.py
autoradionuclide/featurization/: __init__.py  _types.py  featurizer.py  isotope_data.py  registry.py
autoradionuclide/interfaces/: __init__.py  contract.py
autoradionuclide/ledger/: __init__.py  store.py
autoradionuclide/observability/: __init__.py  inspector.py
autoradionuclide/planner/: __init__.py  inner_loop.py  outer_loop.py
autoradionuclide/policy/: __init__.py  acquisition.py
autoradionuclide/provenance/: __init__.py  context.py
autoradionuclide/providers/: __init__.py  anthropic_adapter.py  base.py  mock.py
autoradionuclide/safety/: __init__.py  checks.py
campaigns/: example_psma.yaml  mibg_demo.yaml
cli/: __init__.py  benchmark_runner.py  campaign_launcher.py  inspect_results.py
frozen/: __init__.py  benchmark.json  benchmark_runner.py  harness.py  stub.py
scripts/: export_run.py
strategy/: __init__.py  generation.py  hyperparams.py  weights.py
tests/: __init__.py  test_benchmark.py  test_domain.py  test_featurization.py  test_ledger.py  test_planner.py  test_policy.py  test_providers.py  test_replay.py  test_reporting.py  test_scoring.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  page.tsx
(+6 files in other folders)
